--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,10 @@
     <string name="sign_up">Sign Up</string>
     <string name="login">Login</string>
     <string name="forgot_your_password">Forgot your password?</string>
+    <string name="home">Home</string>
+    <string name="calories">Calories</string>
+    <string name="search">Search for nearby gyms</string>
+    <string name="remainig_calories">1680\nRemaining</string>
+    <string name="assistant">Personal Assistant</string>
+    <string name="message">Type a message…</string>
 </resources>
