adham's work done

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,6 @@
     <string name="forgot_your_password">Forgot your password?</string>
     <string name="app_logo">App Logo</string>
     <string name="goals">Goals</string>
-    <string name="select_up_to_2_goals">Select up to 2 Goals</string>
     <string name="ps_you_can_t_select_lose_weight_and_ngain_weight_at_the_same_time">PS: You can\'t select lose weight and\ngain weight at the same time</string>
     <string name="lose_weight">Lose Weight</string>
     <string name="gain_weight">Gain Weight</string>
@@ -40,4 +39,8 @@
     <string name="_19_99">$19.99</string>
     <string name="standard">Standard</string>
     <string name="free">Free</string>
+    <string name="select_goal">Select Goal</string>
+    <string name="change_password">Change Password</string>
+    <string name="please_enter_your_email_to_change_your_password">Please enter your email to change your password</string>
+    <string name="send_email">Send Email</string>
 </resources>
