--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,9 @@
     <string name="fitness">fitness</string>
     <string name="food">food</string>
     <string name="more">more</string>
+    <string name="profile">Profile</string>
+    <string name="logout">Logout</string>
+    <string name="changePlan">Change Goals</string>
+    <string name="settings">Settings</string>
+    <string name="changeProfile">Change Profile</string>
 </resources>
