added email verifcation

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -103,4 +103,5 @@
     <string name="save_changes">Save Changes</string>
     <string name="plan_name">Plan Name</string>
     <string name="remove_exercise">Remove_exercise</string>
+    <string name="my_plans">My plans</string>
 </resources>
